# code2flowchart

./: CLAUDE.md  README.md
.claude/commands/git/: commit.md  pull-request.md
.claude/commands/tasks/: make-backend-documents.md  make-database-documents.md  make-frontend-documents.md  make-postman.md  review-compatible.md  start-issue.md
.claude/project/backend/: coding_role.md  project_info.md
.claude/project/backend/documents/: api_security_implementation.md  auth_api_implementation.md  (+6 more)
.claude/project/database/: database_schema.md  project_info.md
.claude/project/frontend/: architecture.md  coding_role.md  project_info.md
dev/backend/: .env  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
dev/backend/auth/: middleware.py  user_manager.py
dev/backend/config/: config.py
dev/backend/lib/auth/: middleware.py  user_manager.py  utils.py
dev/backend/models/: __init__.py  node.py  project.py  project_code.py  user.py
dev/backend/routes/: auth.py  flowchart.py  project.py  project_code.py
dev/backend/schemas/: __init__.py  auth.py  node.py  project.py  project_code.py
dev/backend/services/: __init__.py  flowchart_service.py  project_code_service.py  project_service.py
dev/backend/utils/: database.py
dev/database/: docker-compose.yml  init.sql
dev/database/sql/: create_codes_table.sql  create_edges_table.sql  create_nodes_table.sql  create_project_codes_table.sql  create_projects_table.sql  create_users_table.sql
dev/frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
dev/frontend/src/: main.tsx
(+185 files in other folders)
